--- a/package.json
+++ b/package.json
@@ -1,12 +1,35 @@
 {
+  "name": "albaranes-api",
+  "version": "1.0.0",
+  "description": "API para la gestión de albaranes entre clientes y proveedores",
+  "main": "app.js",
+  "scripts": {
+    "start": "node app.js",
+    "dev": "nodemon app.js",
+    "test": "jest --detectOpenHandles"
+  },
   "dependencies": {
+    "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "express-validator": "^7.2.1",
+    "form-data": "^4.0.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "mongoose-delete": "^1.0.1",
     "multer": "^1.4.5-lts.2",
-    "nodemon": "^3.1.9"
+    "nodemailer": "^6.9.10",
+    "pdfkit": "^0.14.0",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.0",
+    "uuid": "^9.0.1"
+  },
+  "devDependencies": {
+    "jest": "^29.7.0",
+    "nodemon": "^3.1.9",
+    "supertest": "^6.3.4"
   }
 }
